# Quant_Ashare

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  config_smoke.yaml  config_tushare.yaml  config_tushare_qlib_provider.yaml  config_walk.yaml  config_walk_mined.yaml  config_walk_n1.yaml  config_walk_n2.yaml  config_walk_n3.yaml  config_walk_n5.yaml  main.py  pyproject.toml
.githooks/: README.md  pre-commit
.github/ISSUE_TEMPLATE/: agent_task.md
.github/workflows/: regen-baseline.yml  test.yml
config/factor_mining/: default.yaml  smoke.yaml
config/presets/: csi300_cadence5_reference.yaml  csi300_campaign_reference.yaml  csi800.yaml  csi800_cadence5_base.yaml  csi800_cadence5_conservative.yaml  csi800_cadence5_conservative_isoweek.yaml  csi800_campaign_base.yaml  csi800_campaign_conservative.yaml  csi800_conservative.yaml  csi800_n5_bootstrap_m1.yaml  csi800_n5_bootstrap_m2.yaml  csi800_n5_bootstrap_m3.yaml  csi800_n5_candidate.yaml  default.yaml  production.yaml  quality_gate3_dev.yaml  quality_gate3_dev_c1_gpa.yaml  quality_gate3_dev_c2_prof.yaml  quality_gate3_dev_c3_cash_op.yaml  quality_gate3_final_adjudication.yaml  quality_gate3_final_adjudication_c1_gpa.yaml  quality_gate3_final_adjudication_c2_prof.yaml  quality_gate3_final_adjudication_c3_cash_op.yaml  smoke.yaml  stage6_label_h1.yaml  stage6_label_h5.yaml  stage6_smoke_h5_1fold.yaml  stage7_daily_h1.yaml  stage7_daily_h5.yaml  stage7_weekly_h1.yaml  stage7_weekly_h5.yaml
config/serving/: csi800_n5_production.yaml
docs/: architecture-overview.md  audit_rebase_20260611.md  baseline_20260616.md  baseline_regen2.md  benchmark-data-contract.md  canonical-backtest-contract.md  code-review.md  csi800-n5-production-runbook.md  csi800_antiinflation_guards_workorder.md  current-state-summary.md  daily-recommend-runbook.md  factor_mining_research_roadmap.md  improvement-roadmap.md  layer-boundaries.md  openspec-loop.md  operations-env-vars.md  operator-status-workflow-foundation.md  phase_b_result.md  phase_c1_result.md  phase_c2_step1_result.md  phase_c2b_dryrun_result.md  qlib-pin.md  run-artifact-contract.md  run-comparison-runbook.md  runbook_daily_update_scheduling.md  taxonomy-data-contract.md  ui_daily_decision_cockpit_workorder.md  universe-data-contract.md  v1-lessons.md
docs/codex/: agent-development.md  local-review-loop.md  openspec-loop.md  review-findings-to-harden.md
docs/factor_mining/: decisions.md  empirical_results_b_std.md  factor_mining_claude_code_design.md  factor_mining_design.md  factor_mining_phase1_preflight.md  inventory.md  scale_invariance.md  user_guide.md
docs/pit/: migration_guide.md  pit_universe_design.md
docs/prereg/: cadence_horizon.yaml  cadence_horizon_evidence_20260709.md  cadence_horizon_results.md  cadence_horizon_verdict_20260709.txt  label_horizon.yaml  label_horizon_preflight.md  label_horizon_rehearsal.md  label_horizon_results.md  label_horizon_slices_20260704.txt  label_horizon_verdict_20260704.txt  quality_profitability.yaml  quality_profitability_charter.md  quality_profitability_gate1_pit_preflight.md  quality_profitability_gate1_pit_scout_brief.md  quality_profitability_ledger.yaml  quality_profitability_pit_preflight_gate3.md  quality_profitability_rehearsal.md  quality_profitability_store_manifest.json
docs/promotion/: README.md  canonical_guard_baseline.json  incumbent_guard_baseline.json
docs/research/: csi800_cadence_campaign_brief.md  csi800_cadence_pair_report.json  csi800_cadence_verdict.json  csi800_campaign_brief.md  csi800_campaign_pair_report.json  csi800_n5_promotion_guard_brief.md  csi800_probe_brief.md  csi800_probe_evidence.json  gate3_step_a_pit_coverage_report.md  gate4a_battle_archive.md  gate4a_c1_ic_report.md  gate4a_c2_ic_report.md  gate4a_c3_ic_report.md  gate4a_fwer_evidence.json  gate4a_slices_fwer_report.md  paper_notes.md  phase8_quality_factor_research_design.md
research/: README.md  ensemble_window_sweep.md  sector_alpha_consistency.md
research/factor_lab/: README.md
research/mined_factors/: .gitignore  README.md
research/regime/: README.md
scripts/: aggregate_industry_attribution.py  bootstrap_cutover_lib.py  bootstrap_ensemble_cutover.py  cleanup_output.py  compare_arm_net_excess.py  compare_factor_handlers.py  compare_paired_slices.py  compare_walk_forward.py  compare_walk_forward_runs.py  daily_recommend.py  daily_update.py  diagnose_fold.py  eval_frozen_model_oos.py  eval_profiles.py  generate_regression_baseline.py  ingest_sh000300_benchmark.py  ingest_tushare_industry.py  ingest_tushare_qlib_provider.py  oneshot_gate1_pit_scout.py  preflight_label_horizon.py  rehearse_label_horizon_gate.py  retrain_gate.py  retrain_gate_lib.py  rotate_ensemble_member.py  rotation_lib.py  run_ui.py  run_walk_forward.py  tushare_preflight.py  verify_mechanical_move.py
scripts/data_pipeline/: 01_fetch_tushare.py  02_build_delisted_registry.py  03_resolve_index_membership.py  04_build_universe_files.py  05_build_qlib_bins.py  06_validate_pit_data.py  07_ingest_benchmark.py  08_fetch_financials.py  README.md
scripts/data_quality/: verify_survivorship.py
scripts/regen/: build_regen2_minibundle.py  diff_baselines.py  freeze_regen2_scores.py  replay_frozen_baseline.py  replay_frozen_baseline_regen2.py
scripts/research/: csi800_campaign_attach_vetoes.py  csi800_campaign_certify.py  csi800_campaign_pair_report.py  gate3_prereg_gate.py  gate3_step_a_coverage_report.py  gate3_store_manifest.py  gate4a_fwer_adjudication.py  gate4a_ic_evaluator.py  rehearse_gate3_prereg_gate.py
src/: __init__.py
src/contracts/: README.md  __init__.py  _shared_validators.py  benchmark_data_contract.py  canonical_boundaries.py  operator_status_workflow_contract.py  run_artifact_contract.py  taxonomy_data_contract.py  universe_data_contract.py
src/core/: README.md  __init__.py  _atomic_io.py  _hashing.py  _ic_utils.py  _json_utils.py  _shared_params.py  _shared_validators.py  _yaml_loader.py  attribution_industry_loader.py  attribution_sleeve_loader.py  logger.py  (+25 more)
tests/: README.md  __init__.py  e2e_guard.py
web/: README.md  __init__.py
(+1095 files in other folders)
