[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlib_trading_system_v2"
version = "0.0.1"
description = "V2 qlib-based quantitative trading system (contract-first, governance-locked)."
requires-python = ">=3.10,<3.13"

# NOTE:
# - qlib is NOT listed here because it is consumed from a local source
#   checkout on dev machines (see docs/qlib-pin.md). Install manually:
#     pip install -e D:/Qlib/qlib
#   CI installs from the pinned git commit instead (see .github/workflows).
# - numpy is pinned below 2.0 because qlib 0.9.x still assumes numpy 1.x
#   dtype semantics. Do not relax this upper bound without a separate
#   spec-approved change.
dependencies = [
  "numpy>=1.24,<2.0",
  "pandas>=2.0,<2.3",
  "pyarrow>=14",
  "ruamel.yaml>=0.17",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "optuna>=3.0",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "mypy>=1.8",
]
research = [
  "jupyter",
  "matplotlib",
  "seaborn",
]
tushare = [
  "tushare>=1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
