[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlib_trading_system_v2"
version = "0.0.1"
description = "V2 qlib-based quantitative trading system (contract-first, governance-locked)."
requires-python = ">=3.10,<3.13"

# NOTE:
# - qlib is NOT listed here because it is consumed from a local source
#   checkout on dev machines (see docs/qlib-pin.md). Install manually:
#     pip install -e D:/Qlib/qlib
#   CI installs from the pinned git commit instead (see .github/workflows).
# - numpy is pinned below 2.0 because qlib 0.9.x still assumes numpy 1.x
#   dtype semantics. Do not relax this upper bound without a separate
#   spec-approved change.
dependencies = [
  "numpy>=1.24,<2.0",
  "pandas>=2.0,<2.3",
  "pyarrow>=14",
  "ruamel.yaml>=0.17",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "optuna>=3.0",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.8",
]
research = [
  "jupyter",
  "matplotlib",
  "seaborn",
]
tushare = [
  "tushare>=1.4",
]
ui = [
  "streamlit>=1.57",
  "plotly>=5.20",
  "reportlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

# Strict mode opt-in. Growing the whitelist directory-by-directory
# per the `add-mypy-strict-everywhere` OpenSpec change (PR #171).
# End state: flip ``[tool.mypy] strict = true`` and demote this
# block to a single ``src.factor_mining.*`` opt-out.
#
# Batch 2 (this PR) adds ``src.data.*`` to the wildcard set. The
# three original FU-7 ``src.data.*`` individual modules are now
# redundant under the wildcard and removed (the
# ``STRICT_MODULES`` tuple test was updated to match). The
# ``src.core.walk_forward._resume`` + ``src.core.regression_baseline``
# entries stay until batch 4's flip-and-invert PR — they are
# redundant under ``src.core.*`` but the test still pins them.
#
# Excluded: ``src/factor_mining/`` (parallel workstream — strict mid-
# flight = constant merge noise; opt-out removed in a follow-up
# after that stabilises).
[[tool.mypy.overrides]]
module = [
  "src.core.walk_forward._resume",
  "src.core.regression_baseline",
  "src.core.*",
  "src.pit.*",
  "src.data.*",
  "scripts.*",
]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
