[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlib_trading_system_v2"
version = "0.0.1"
description = "V2 qlib-based quantitative trading system (contract-first, governance-locked)."
requires-python = ">=3.10,<3.13"

# NOTE:
# - qlib is NOT listed here because it is consumed from a local source
#   checkout on dev machines (see docs/qlib-pin.md). Install manually:
#     pip install -e D:/Qlib/qlib
#   CI installs from the pinned git commit instead (see .github/workflows).
# - numpy is pinned below 2.0 because qlib 0.9.x still assumes numpy 1.x
#   dtype semantics. Do not relax this upper bound without a separate
#   spec-approved change.
dependencies = [
  "numpy>=1.24,<2.0",
  # scipy window that genuinely supports numpy<2: scipy>=1.16 wheels are
  # numpy-2-era and import numpy.lib.array_utils (numpy>=2 only), which
  # breaks qlib.backtest's import chain under the numpy pin above. Keep
  # the two bounds in lockstep (also inlined in .github/workflows/test.yml
  # for the qlib install step).
  "scipy>=1.10,<1.14",
  "pandas>=2.0,<2.3",
  "pyarrow>=14",
  "ruamel.yaml>=0.17",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "optuna>=3.0",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.8",
]
research = [
  "jupyter",
  "matplotlib",
  "seaborn",
]
tushare = [
  "tushare>=1.4",
]
ui = [
  "streamlit>=1.57",
  "plotly>=5.20",
  "reportlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# `add-mypy-strict-everywhere` (PR #171) batch 4: the four-batch
# migration completes here. ``strict = true`` is the repo default;
# every tree we curated through batches 1–3 (src/core/, src/pit/,
# src/data/, scripts/, web/operator_ui/) plus src/contracts/ runs
# strict by default. The whitelist that grew through the migration
# is gone — strict is the rule, opt-out is the exception.
#
# The single permitted opt-out is ``src.factor_mining.*`` — a parallel
# workstream on another session, strict mid-flight would generate
# constant merge noise. A follow-up PR removes this opt-out once
# the workstream stabilises. The block lists **every flag implied
# by ``mypy --strict``** explicitly set to ``false`` so future
# additions to the strict-flag set don't silently leak into the
# factor-mining tree (Codex P1 on PR #171).
[[tool.mypy.overrides]]
module = ["src.factor_mining.*"]
# ``ignore_errors = true`` is the practical opt-out — it skips ALL
# mypy errors (strict and non-strict) inside this module set. The
# explicit per-flag ``false`` settings below are belt-and-braces:
# if a future mypy release adds a new strict-implied flag, it stays
# off here even if someone accidentally drops ``ignore_errors``.
# (Codex P1 on PR #171 — listing only the strict subset would let
# new strict flags silently leak in.) ``warn_unused_configs`` and
# ``warn_redundant_casts`` are NOT listed because mypy rejects them
# per-module ("should only specify per-module flags").
ignore_errors = true
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_unused_ignores = false
warn_return_any = false
no_implicit_reexport = false
strict_equality = false
strict_concatenate = false
extra_checks = false
